--- a/angular-cordova/www/index.html
+++ b/angular-cordova/www/index.html
@@ -10,7 +10,11 @@
 <!-- endinject -->
   </head>
   <body>
-    <h3>Hello word1</h3><!-- inject:js -->
+    <h3>Hello word1</h3>
+    <h4>I'm ok</h4><!-- inject:js -->
+<script src="/src/app/lib/angular.min.js"></script>
+<script src="/src/app/root/app.module.js"></script>
+<script src="/src/app/root/app.component.js"></script>
 <script src="/src/app/pages/page1/page1.js"></script>
 <script src="/src/app/pages/page2/page2.js"></script>
 <!-- endinject -->
