--- a/angular-cordova/www/index.html
+++ b/angular-cordova/www/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-  <head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover"><!-- inject:css -->
-<link rel="stylesheet" href="/pages/page1/page1.css">
-<link rel="stylesheet" href="/pages/page2/page2.css">
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover">
+    <!-- inject:css -->
+    <link rel="stylesheet" href="/scss/normalize.css">
+    <link rel="stylesheet" href="/scss/style.css">
+    <link rel="stylesheet" href="/pages/page1/page1.css">
+    <link rel="stylesheet" href="/pages/page2/page2.css">
+    <link rel="stylesheet" href="/components/popup/popup.css">
+    <!-- endinject -->
+</head>
+<body>
+<div class="swapper">
+    <global-app></global-app>
+</div>
+<!-- inject:js -->
+<script src="/lib/angular.min.js"></script>
+<script src="/lib/angular-route.min.js"></script>
+<script src="/root/app.module.js"></script>
+<script src="/pages/news/news.module.js"></script>
+<script src="/components/popup/popup.module.js"></script>
+<script src="/services/popup-service.js"></script>
+<script src="/directives/content-modal.js"></script>
+<script src="/directives/model.directive.js"></script>
+<script src="/directives/ngContentModal.js"></script>
+<script src="/root/app.component.js"></script>
+<script src="/pages/news/new.component.js"></script>
+<script src="/pages/news/news.component.js"></script>
+<script src="/components/popup/popup.component.js"></script>
+<script src="/components/item-select/item-select.js"></script>
+<script src="/pages/page1/page1.js"></script>
+<script src="/pages/page2/page2.js"></script>
 <!-- endinject -->
-  </head>
-  <body>
-    <h3>Hello word1</h3>
-    <h4>I'm ok</h4><!-- inject:js -->
-<script src="/src/app/lib/angular.min.js"></script>
-<script src="/src/app/root/app.module.js"></script>
-<script src="/src/app/root/app.component.js"></script>
-<script src="/src/app/pages/page1/page1.js"></script>
-<script src="/src/app/pages/page2/page2.js"></script>
-<!-- endinject -->
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript">
-      angular.element(document).ready(function () {
-          if (window.cordova) {
-              document.addEventListener('deviceready', function () {
-                  angular.bootstrap(document.body, ['app']);
-              }, false);
-          } else {
-              angular.bootstrap(document.body, ['app']);
-          }
-      })
-    </script>
-  </body>
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript">
+    angular.element(document).ready(function () {
+        if (window.cordova) {
+            document.addEventListener('deviceready', function () {
+                angular.bootstrap(document.body, ['app']);
+            }, false);
+        } else {
+            angular.bootstrap(document.body, ['app']);
+        }
+    })
+</script>
+</body>
 </html>
