--- a/angular-cordova/www/index.html
+++ b/angular-cordova/www/index.html
@@ -4,9 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover"><!-- inject:css -->
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, viewport-fit=cover">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&amp;display=swap"><!-- inject:css -->
 <link rel="stylesheet" href="/scss/normalize.css">
 <link rel="stylesheet" href="/scss/style.css">
+<link rel="stylesheet" href="/pages/news.css">
+<link rel="stylesheet" href="/pages/news/news.css">
+<link rel="stylesheet" href="/components/chip/chip.css">
 <link rel="stylesheet" href="/components/popup/popup.css">
 <!-- endinject -->
   </head>
@@ -22,9 +26,17 @@
 <script src="/services/popup-service.js"></script>
 <script src="/directives/ngContentModal.js"></script>
 <script src="/root/app.component.js"></script>
+<script src="/components/chip/chip.component.js"></script>
+<script src="/components/list-select/list-select.component.js"></script>
 <script src="/components/popup/popup.component.js"></script>
+<script src="/layout/footer/footer.component.js"></script>
+<script src="/layout/header/header.component.js"></script>
 <script src="/pages/news/news.component.js"></script>
+<script src="/pages/components/chip-list/chip-list.component.js"></script>
+<script src="/pages/news/components/chip-list/chip-list.component.js"></script>
 <script src="/components/item-select/item-select.js"></script>
+<script src="/components/chip/chip.template.js"></script>
+<script src="/layout/default-layout.js"></script>
 <!-- endinject -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
