--- a/angular-cordova/www/root/app.template.html
+++ b/angular-cordova/www/root/app.template.html
@@ -1,2 +1,5 @@
 
+<ng-content-modal is-open="$root.popup.select" on-close="$root.popupSelectConfig.closePopup()" data-select="$root.popupSelectConfig.listItems">
+  <list-select data-select="$root.popupSelectConfig.listItems"></list-select>
+</ng-content-modal>
 <div class="template" ng-view="ng-view"></div>
